deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-server-website
  namespace: core-storage-dev
spec:
  selector:
    app.kubernetes.io/name: website
    app.kubernetes.io/part-of: core-server
    app.kubernetes.io/version: v0.1.0
  ports:
    - protocol: TCP
      name: http-website
      port: 9050
      targetPort: 80
